<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#833E5373"
    android:fitsSystemWindows="true"
    tools:context=".views.activities.SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fitsSystemWindows="true"

        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryVariant"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/image_numbers"
                app:layout_collapseMode="pin"
                >
            </androidx.appcompat.widget.AppCompatImageView>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                android:scrollbars="vertical"
                >
            </androidx.appcompat.widget.Toolbar>




        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setting_btn_show_all_games"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/setting_btn_show_all_games"
            android:textColor="#B6D2FD"
            android:textSize="25sp"
            app:cornerRadius="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setting_btn_show_last_game"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/setting_btn_show_last_game"
            android:textColor="#B6D2FD"
            android:textSize="25sp"
            app:cornerRadius="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setting_btn_change_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/setting_btn_change_pass"
            android:textColor="#B6D2FD"
            android:textSize="25sp"
            app:cornerRadius="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setting_btn_clear_all_games"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/setting_btn_clear_all_games"
            android:textColor="#B6D2FD"
            android:textSize="25sp"
            app:cornerRadius="40dp" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>