<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".views.activities.RegisterActivity"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fitsSystemWindows="true"

        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryVariant"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/reg_top_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/image_numbers"
                app:layout_collapseMode="pin"
                >

            </androidx.appcompat.widget.AppCompatImageView>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>





    <androidx.core.widget.NestedScrollView
        android:id="@+id/reg_nested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ac_register_bg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/reg_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:background="@drawable/ac_register_bg"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:id="@+id/test_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Welcome"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:layout_marginBottom="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColor="@color/tv_welcome"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1.5"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/reg_et_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/et_full_name"
                        android:drawableStart="@drawable/ic_full_name"
                        android:drawablePadding="10dp"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/reg_add_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:background="@drawable/ac_register_image_bg"
                    android:src="@drawable/ic_baseline_add_a_photo_24"
                    />


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/reg_et_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/et_email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/reg_et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date|text"
                    android:drawableStart="@drawable/ic_user_name"
                    android:drawablePadding="10dp"
                    android:hint="@string/et_user_name">
                </androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    tools:ignore="DuplicateIds"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/reg_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/et_pass"
                        android:drawableStart="@drawable/ic_lock_password"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:password="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    tools:ignore="DuplicateIds"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/reg_et_re_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/er_re_password"
                        android:drawableStart="@drawable/ic_lock_password"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:password="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:scrollbarSize="20sp"
                app:boxCollapsedPaddingTop="10dp"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/reg_sp_country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/reg_sp_country"
                    android:padding="5dp"
                    android:popupBackground="@drawable/reg_bg_spinner"
                    tools:ignore="DuplicateIds"
                    >
                </androidx.appcompat.widget.AppCompatSpinner>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/reg_db_date_birth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/reg_date_birth"
                    android:drawableStart="@drawable/ic_calender"
                    android:drawablePadding="10dp"
                    android:inputType="date|datetime"
                    tools:ignore="DuplicateIds" />
            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                >

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/reg_rb_male"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/rb_male"
                    android:textColor="@color/colorPrimary"
                    app:buttonTint="@color/colorPrimary"
                    android:textSize="18sp"
                    />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/reg_rb_female"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/colorPrimary"
                    app:buttonTint="@color/colorPrimary"
                    android:layout_weight="1"
                    android:text="@string/rb_female"
                    android:textSize="18sp"
                    />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reg_btn_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_save"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="#E1C3CCDB"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                >
            </com.google.android.material.button.MaterialButton>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>