<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".views.activities.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryVariant"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/image_numbers"
                app:layout_collapseMode="pin"
                >
            </androidx.appcompat.widget.AppCompatImageView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ac_register_bg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:background="@drawable/ac_register_bg"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/log_image_person"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/ac_register_image_bg"
                android:src="@drawable/logo"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/login_et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/et_user_name"
                    android:drawableStart="@drawable/ic_user_name"
                    android:drawablePadding="10dp"
                    android:inputType="date|text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/et_pass"
                    android:drawableStart="@drawable/ic_open_password"
                    android:drawablePadding="10dp"
                    android:inputType="text|textPassword"
                    android:password="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/log_btn_login"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/btn_login"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textColor="#E1C3CCDB"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/log_btn_register"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:text="@string/btn_register"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#E1C3CCDB"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/log_cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:layout_marginBottom="250dp"
                android:textStyle="bold"
                app:buttonTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:text="@string/cb_remember_me"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>